# Java_Web_GitHub_Actions

./: .gitignore  Makefile  README.md  dockerfile  env_file  pyproject.toml
.ci/: ansible-lint  ci.yml  pre-commit-config.yaml  yamlint
.github/workflows/: deploy.yaml  deploy.yml  destroy.yml  lint.yaml  pre-commit.yaml  pre_commit.yml  web_app-ci.yaml
deployment/ansible/: Makefile  ansible.cfg  playbook.yml  test_webapp.py
deployment/ansible/collections/: requirements.yml
deployment/ansible/roles/check_docker_compose/defaults/: main.yml
deployment/ansible/roles/check_docker_compose/handlers/: main.yml
deployment/ansible/roles/check_docker_compose/tasks/: main.yml
deployment/ansible/roles/check_docker_compose/vars/: main.yml
deployment/ansible/roles/deploy_web_app/defaults/: main.yml
deployment/ansible/roles/deploy_web_app/tasks/: main.yml
deployment/ansible/roles/deploy_web_app/templates/: docker-compose.yml.j2
deployment/ansible/roles/install_config_nginx/defaults/: main.yml
deployment/ansible/roles/install_config_nginx/handlers/: main.yml
deployment/docker/: .dockerignore  dockerfile
deployment/docker/make_docker/: dockerfile
deployment/docker/web_app/: main.py
deployment/python_pytest/: test_webapp.py
deployment/terraform/: .terraform.lock.hcl  Makefile  ansible.tf  backend.tf  main.tf  network.tf  outputs.tf  terraform.tfstate  variables.tf  versions.tf
deployment/terraform/environments/: eu-central-1-dev.tfvars  eu-central-1-prod.tfvars
deployment/terraform/templates/: inventory.tftpl
python_web/: main.py
(+12 files in other folders)
